Improved contact and request loading
fixed contact loading with the wrong name

--- a/web/src/components/chat/ChatPage.module.css
+++ b/web/src/components/chat/ChatPage.module.css
@@ -176,9 +176,11 @@
     display: flex;
     flex-direction: column;
     margin: 5%;
+    align-items: center;
 }
 .accoDisplay .textDisplay h3 {
     margin: 0;
+    text-align: center;
 }
 
 .chatContainer {
