--- a/web/src/components/guestdashboard/guestdashboard.css
+++ b/web/src/components/guestdashboard/guestdashboard.css
@@ -1,7 +1,3 @@
-/* *{
-  border: 1px red solid;
-} */
-
 .container {
   display: flex;
   flex-direction: column;
@@ -48,12 +44,12 @@
 }
 
 .wijzers:hover {
-  box-shadow: 4px 4px #0D9813;
+  background-color: var(--primary-color);
   transition: .3s;
 }
 
 .wijzers.active {
-  background-color: #0D9813;
+  background-color: var(--primary-color);
   color: white;
 }
 
@@ -283,7 +279,7 @@
   height: 2rem;
   position: relative;
   text-align: center;
-    cursor: pointer;
+  cursor: pointer;
 }
 .edit-icon-background:hover{
   background-color: #6CD46F ;
