--- a/web/src/components/hostdashboard/settingshostdashboard.css
+++ b/web/src/components/hostdashboard/settingshostdashboard.css
@@ -92,6 +92,18 @@
     width: auto;
 }
 
+.host-icon-background {
+    background-color: var(--secondary-color);
+    border-radius: 15px;
+    padding: 0.4rem;
+    margin-left: 2%;
+    width: 2rem;
+    height: 2rem;
+    position: relative;
+    text-align: center;
+    cursor: pointer;
+  }
+
 @media (max-width: 768px) {
     .horizontalOptions {
         flex-direction: column;
