--- a/web/src/components/guestdashboard/guestdashboard.css
+++ b/web/src/components/guestdashboard/guestdashboard.css
@@ -181,6 +181,7 @@
   padding: 20px;
   display: flex;
   justify-content: center;
+  gap: 15% ;
 }
 
 .leftContent {
@@ -197,7 +198,9 @@
   height: 40%;
   overflow: auto;
 }
-
+.viewAllBooking{
+  color: #0D9813;
+}
 .bookingBox,
 .messageBox {
   background-color: #fff;
@@ -225,10 +228,18 @@
 }
 
 .personalInfoContent {
-  display: flex;
+
   flex-direction: column;
   margin-left: 1px;
   width: 100%;
+  flex: 1;
+  padding: 20px;
+
+}
+
+.accomodation-side{
+  flex: 2;
+  padding: 20px;
 }
 
 .infoBox {
@@ -273,18 +284,28 @@
   border-radius: 12px;
   background-color: #f9f9f9;
 }
+
+.personal-info-header {
+  display: flex;
+  align-items: center;
+  gap: 10px; /* Ruimte tussen de koptekst en de bewerkknop */
+}
+
 .edit-icon-background {
   background-color: #0D9813;
   border: 1px solid #0D9813;
   border-radius: 15px;
   padding: 0.4rem;
-  margin-left: 2%;
   width: 2rem;
   height: 2rem;
-  position: relative;
   text-align: center;
-    cursor: pointer;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
+
 .edit-icon-background:hover{
   background-color: #6CD46F ;
 }
@@ -334,4 +355,4 @@
       height: 0;
     }
   }
-  
+
