--- a/web/src/components/booking/imagegallery.css
+++ b/web/src/components/booking/imagegallery.css
@@ -2,6 +2,13 @@
   width: 100%;
 }
 
+.selected-image {
+  position: relative;
+  width: 100%;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
 .selected-image img {
   width: 100%;
   height: auto;
@@ -24,6 +31,7 @@
   cursor: pointer;
   opacity: 0.6;
   border-radius: 15px;
+  transition: opacity 0.3s ease;
 }
 
 .image-thumbnails img.active,
@@ -31,8 +39,32 @@
   opacity: 1;
 }
 
-.selected-thumbnail {
-  object-fit: cover;
-  width: 100%;
-  aspect-ratio: 16 / 9;
+.share-button,
+.like-button {
+  position: absolute;
+  top: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: none;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease;
+}
+
+.share-button {
+  left: 10px;
+}
+
+.like-button {
+  right: 10px;
+}
+
+.like-button:hover,
+.share-button:hover {
+  background-color: rgba(200, 200, 200, 0.8);
 }
