--- a/web/src/components/home/Accommodations.css
+++ b/web/src/components/home/Accommodations.css
@@ -32,9 +32,6 @@
   transition: transform 0.4s ease-in-out;
 }
 
-.accocard:hover img {
-  transform: scale(1.06);
-}
 
 .accocard:hover .accocard-title{
   background: rgba(13, 152, 20, 0.616);
@@ -55,9 +52,9 @@
   text-align: center;
   overflow: hidden;
   white-space: nowrap;
-  text-overflow: ellipsis; 
+  text-overflow: ellipsis;
   position: absolute;
-  bottom: 160px; 
+  bottom: 160px;
   left: 50%;
   transform: translateX(-50%);
   color: white;
@@ -79,7 +76,7 @@
   width: 300px;
   display: -webkit-box;
   -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;  
+  -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
   height: 3em;
@@ -169,3 +166,39 @@
     text-align: center;
   }
 }
+
+.accocard-share-button {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: none;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.accocard-share-button:hover, .accocard-like-button:hover {
+  background-color: rgba(255, 255, 255, 0.9); /* Optionele hover effect */
+}
+
+.accocard-like-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: none;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
