--- a/web/src/components/home/Accommodations.css
+++ b/web/src/components/home/Accommodations.css
@@ -181,10 +181,13 @@
   justify-content: center;
   cursor: pointer;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  transition: opacity 0.5s ease-in;
+  opacity: 0;
+  transition-delay: 0.1s;
 }
 
 .accocard-share-button:hover, .accocard-like-button:hover {
-  background-color: rgba(255, 255, 255, 0.9); /* Optionele hover effect */
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 .accocard-like-button {
@@ -200,5 +203,40 @@
   align-items: center;
   justify-content: center;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  transition: opacity 0.5s ease-in;
+  opacity: 0;
+  transition-delay: 0.1s;
 }
 
+.accocard:hover .accocard-share-button,.accocard:hover .accocard-like-button {
+  opacity: 1;
+}
+
+body {
+  position: relative;
+  height: 100%;
+}
+
+body {
+  background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+}
