--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -1,8 +1,14 @@
 /* CSS for the header */
 .app-header {
     box-shadow: 0 2px 6px 0 #0d1a2626;
-    padding: 20px 50px;
+    padding: 20px 50px 5px 50px;
     text-align: center;
+}
+
+.trustpilot-bar {
+    display: flex;
+    justify-content: center;
+    margin-top: 2px;
 }
 
 .header-nav {
@@ -148,6 +154,14 @@
 }
 
 @media screen and (max-width: 768px) {
+    .trustpilot-bar {
+        margin: 0 auto 0 auto;
+        padding-bottom: 10px;
+    }
+    .trustpilot-widget {
+        display: flex;
+        justify-content: center;
+    }
     .logo {
         padding-top: 2vh;
     }
@@ -183,7 +197,6 @@
     }
 
     .header-nav {
-        box-shadow: 0 2px 0 0 #0d1a2626;
         width: auto;
     }
 
@@ -397,5 +410,4 @@ a:hover {
         border-right: none;
         padding-right: 0px;
     }
-
 }
