--- a/web/src/components/hostdashboard/HostPropertyCare.css
+++ b/web/src/components/hostdashboard/HostPropertyCare.css
@@ -1,18 +1,74 @@
-.property-content{
+.page-body {
     display: flex;
-    flex-direction: column;
-    align-items:center;
 }
 
-.property-span{
+.host-pc-property {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.property-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    margin-left: 14%;
+    max-width: 1000px;
+}
+
+.property-span {
     color: blue;
     text-decoration: underline;
     cursor: pointer;
 }
-.host-pc-property{
-    display: flex;
-    width: 100%;
+
+.property-h3 {
+    width: 60%;
 }
-.property-h3{
-    width:60%;
+
+@media (max-width: 768px) {
+    .page-body {
+        flex-direction: column;
+    }
+
+    .sidebar {
+        width: 100%;
+    }
+
+    .property-content {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        margin-left: 14%;
+        max-width: 1000px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .page-body {
+        flex-direction: column;
+    }
+
+    .host-pc-property {
+        flex-direction: column;
+        width: 100%;
+        margin-top: 20px;
+    }
+
+    .property-content {
+        padding: 15px;
+        margin-left: 0;
+        max-width: 80%;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .property-h3 {
+        width: 80%;
+    }
 }
