--- a/web/src/components/booking/bookingoverview.css
+++ b/web/src/components/booking/bookingoverview.css
@@ -1,5 +1,4 @@
 .Bookingcontainer {
-    padding: 5rem 2rem;
     height: 100%;
     margin: 20px auto;
     border-radius: 8px;
@@ -92,6 +91,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin: 20px
 }
 
 
